lab1/Test/L1-A-1-66.cmm
struct {
}oDoWF ( float haA1jNuPJPqD ) {
}
int EH6xM5PpclVsc4s ( struct {
  int D9XDlVVE00ED2RM ;
  struct {
  }qNzyU3h9 ;
}CU5rl8uthi [ 2139778552 ] , float bj0UH4nJquGj2gFWq 
  [ 1461111969 ] [ 1582582402 ] , float return pm7X3Y 
  ) {
  float MMygEc , fNiyzKy14J / ;
  if ( - - NB6xs1QsS4K * isWW554jKkpVBKZDcD * o2kiEx2j_37v 
    - xGi47t7FOkjpRsgkrv + Ol3G9o6_kM0SFMpUR - hfqtichiEkeIvp 
    - DkkgtuJr8ZxB05QdI5 != xTgfZ0a == mEcLpnOsX > MaOhobjkD8 
    > mWYhV <= UH0kYXDXlfdKy >= rd >= rsBvd6vSrBajKHda 
    >= peYLzxt6t == U == yQxit4jG6 != AdU >= Net2s8ZJQN1xJVJ8S 
    == DAEFs41iO <= vMHsQoR6tS0tR83oz97 )   lNIDgT9POd27 
    ;
else   Cd39 ;

  if ( ! eGL5gou_Kzbuye2Zye * vl5dryOL68qN * mSNOBTwhoV8d 
    * EDNvKwQTJj2 / sErN / CbEJTiSTFz - NyCNCXcEF82phWxjoD 
    < GcFid6Je2EvSPl 1905352481 && N4s_n2uUImbVBevAdT8B 
    || r9xJzemDx3Odd )   if ( h4u )   if ( Vj_AaIEr0tKF 
    )   if ( pCRQdtS )   if ( YV7 )   tPqizWJy < ;





}
